# temoto_demo_resources

./: README.md
action_test_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
action_test_workspace/log/: latest_build
action_test_workspace/src/data/: 07_pixel_coordinates.json  08_ai_search_result.json  10_final_coordinates.json  error_log.json  error_result.json  items.json  parameters.json
action_test_workspace/src/get_coordinates/: CMakeLists.txt
action_test_workspace/src/get_coordinates/include/get_coordinates/: ai_core.h  getcoord_costmap_generation.h  getcoord_grid_generation.h  getcoord_newcoordmap_generation.h  getcoord_nonTraversable_generation.h  getcoord_objectmap_generation.h  getcoord_origincoord_return.h  getcoord_pathfind_return.h  getcoord_pixelcoord_return.h  getcoord_robotmap_generation.h  getcoord_scalemap_generation.h  llm_coordinator.h
action_test_workspace/src/get_coordinates/src/: ai_core.cpp  get_coordinates_run.cpp  get_coordinates_run_badai.cpp  get_coordinates_run_og.cpp  getcoord_costmap_generation.cpp  getcoord_grid_generation.cpp  getcoord_newcoordmap_generation.cpp  getcoord_nonTraversable_generation.cpp  getcoord_objectmap_generation.cpp  getcoord_origincoord_return.cpp  getcoord_pathfind_return.cpp  getcoord_pixelcoord_return.cpp  getcoord_robotmap_generation.cpp  getcoord_scalemap_generation.cpp  llm_com.cpp  llm_coordinator.cpp
actions/get_coordinates/: CMakeLists.txt  CMakeLists_action.txt  get_coordinates.umrf.json  package.xml
actions/get_coordinates/data/: map.yaml
actions/get_coordinates/include/get_coordinates/: ai_core.hpp  get_coordinates_run.hpp  getcoord_grid_generation.hpp  getcoord_newcoordmap_generation.hpp  getcoord_origincoord_return.hpp  getcoord_pathfind_return.hpp  input_parameters.hpp  llm_coordinator.hpp  output_parameters.hpp  temoto_action.hpp
actions/get_coordinates/src/: get_coordinates.cpp  get_coordinates_run.cpp  getcoord_costmap_generation.cpp  getcoord_grid_generation.cpp  getcoord_nonTraversable_generation.cpp  llm_coordinator.cpp
actions/inspect/: CMakeLists.txt  inspect.umrf.json  package.xml
actions/inspect/include/inspect/: input_parameters.hpp  output_parameters.hpp  temoto_action.hpp
actions/inspect/src/: inspect.cpp
actions/navigate_to/: CMakeLists.txt  navigate_to.umrf.json  package.xml
actions/navigate_to/include/navigate_to/: input_parameters.hpp  temoto_action.hpp
actions/navigate_to/src/: navigate_to.cpp
actions/navigate_to_pose/: CMakeLists.txt  navigate_to_pose.umrf.json  package.xml
actions/navigate_to_pose/include/navigate_to_pose/: input_parameters.hpp  temoto_action.hpp
actions/navigate_to_pose/src/: navigate_to_pose.cpp
actions/publisher/: CMakeLists.txt  example_publisher.umrf.json  package.xml
actions/publisher/include/publisher/: input_parameters.hpp  temoto_action.hpp
actions/publisher/src/: publisher.cpp
data/: map.pgm
get_coordinates/: CMakeLists.txt  CMakeLists_action.txt  get_coordinates.umrf.json
get_coordinates/include/get_coordinates/: get_coordinates_run.hpp  getcoord_costmap_generation.hpp  getcoord_nonTraversable_generation.hpp  getcoord_objectmap_generation.hpp  getcoord_pixelcoord_return.hpp  getcoord_robotmap_generation.hpp  getcoord_scalemap_generation.hpp  temoto_action.hpp
get_coordinates/src/: ai_core.cpp  get_coordinates.cpp  getcoord_newcoordmap_generation.cpp  getcoord_objectmap_generation.cpp  getcoord_origincoord_return.cpp  getcoord_pathfind_return.cpp  getcoord_pixelcoord_return.cpp  getcoord_robotmap_generation.cpp  getcoord_scalemap_generation.cpp
graphs/: example_getcoordinates.umrf.graph.json  example_navigate.umrf.graph.json  example_publisher.umrf.graph.json
